packages/nestjs-trpc/cli/tests/fixtures/invalid/no-import/no-import.router.ts
// No import of Router decorator - using it without importing

@Router()
export class NoImportRouter {
    getUser() {
        return { name: 'test' };
    }
}
